# serde_datalog

./: Cargo.toml  LICENSE  README.md  cargo.db
.github/workflows/: rust.yml
examples/: test.dl  test.json  test1.ron  test1.yaml  test1_toml_query.dl  test2.json  test2_json_query.dl  test3.json  test3_json_query.dl
schemas/: json.dl  serde.dl  serde_string_key.dl  toml.dl
src/: CHANGELOG.md  TODO.md  backend.rs  backends.rs  input_format.rs  lib.rs  main.rs
src/backend/: souffle_sqlite.rs  vector.rs
src/backends/: souffle_sqlite.rs  vector.rs
src/input_format/: json.rs  ron.rs  toml.rs  yaml.rs
tests/: test_examples.rs  test_extractor.rs  test_values.rs
