[package]
name = "serde_datalog"
version = "0.1.0"
edition = "2021"

[dependencies]
arbitrary = { version = "1.3.2", optional = true }
arbitrary-json = { version = "0.1.1", optional = true }
clap = { version = "4.4.13", features = ["derive"], optional = true }
erased-serde = { version = "0.4.2", optional = true }
rand = { version = "0.8.5" }
ron = { version = "0.8.1", optional = true }
rusqlite = "0.30.0"
serde = { version = "1.0.194" } 
serde-transcode = { version = "1.1.1", optional = true }
serde_json = { version = "1.0.111", optional = true } 
toml = { version = "0.8.8", optional = true }
serde_yaml = { version = "0.9.30", optional = true }

[features]
default = ["all_formats"]
bin_only = ["clap", "erased-serde", "serde-transcode"]
json = ["dep:serde_json", "dep:arbitrary", "dep:arbitrary-json"]
toml = ["dep:toml"]
ron = ["dep:ron"]
yaml = ["dep:serde_yaml"]
all_formats = ["json", "toml", "ron", "yaml"]
all = ["bin_only", "all_formats"]

[lib]
name = "serde_datalog"
path = "src/lib.rs"

[[bin]]
name = "serde_datalog"
path = "src/main.rs"
required-features = ["bin_only"]
