[package]
name = "serde_datalog"
description = "A Serde serializer that extracts Datalog facts"
repository = "https://github.com/rolph-recto/serde_datalog"
keywords = ["serde", "datalog"]
version = "0.1.1"
edition = "2021"
readme = "README.md"
license = "MIT"

[dependencies]
arbitrary = { version = "1.3.2", optional = true }
arbitrary-json = { version = "0.1.1", optional = true }
clap = { version = "4.4.13", features = ["derive"], optional = true }
erased-serde = { version = "0.4.2", optional = true }
rand = { version = "0.8.5" }
ron = { version = "0.8.1", optional = true }
rusqlite = "0.30.0"
serde = { version = "1.0.194" } 
serde-transcode = { version = "1.1.1", optional = true }
serde_json = { version = "1.0.111", optional = true } 
toml = { version = "0.8.8", optional = true }
serde_yaml = { version = "0.9.30", optional = true }

[features]
default = ["json"]

# dependencies only needed by the serde_datalog binary 
bin_only = ["clap", "erased-serde", "serde-transcode"]

# support for converting JSON files with the serde_datalog binary 
json = ["dep:serde_json", "dep:arbitrary", "dep:arbitrary-json"]

# support for converting RON files with the serde_datalog binary 
ron = ["dep:ron"]

# support for converting TOML files with the serde_datalog binary 
toml = ["dep:toml"]

# support for converting YAML files with the serde_datalog binary 
yaml = ["dep:serde_yaml"]

all_formats = ["json", "toml", "ron", "yaml"]
all = ["bin_only", "all_formats"]

[lib]
name = "serde_datalog"
path = "src/lib.rs"

[[bin]]
name = "serde_datalog"
path = "src/main.rs"
required-features = ["bin_only"]
